core-services/Prometheus/RHOS/prometheus-rhos-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    route.openshift.io/termination: edge
spec:
  rules:
  - host: grafana.rhos.home.virtualelephant.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    route.openshift.io/termination: edge
spec:
  rules:
  - host: prometheus.rhos.home.virtualelephant.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              number: 9090
